# tmc_gazebo_task_evaluators

./: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
env-hooks/: 99.tmc_gazebo_task_evaluators.bash.in  CMakeLists.txt
launch/: robocup2021.launch
scripts/: count_objects_test  record_gazebo_stat  setup_score_widget  wait_for
src/: hhcc_move_camera_controller.cpp  hhcc_move_task_score_counter.cpp  hhcc_score_counter.cpp  hhcc_tidy_camera_controller.cpp  object_in_box_detector.cpp  reached_region_calculator.cpp  score_widget.cpp  score_widget.hh  undesired_contact_detector.cpp  wrs_camera_controller.cpp  wrs_score_counter.cpp
tests/: hhcc_tidy_move_blocks_to_box.sh  hhcc_tidy_move_dish_to_dishwasher.sh  hhcc_tidy_move_objects_to_wagon.sh  hhcc_tidy_move_teacup_to_dishwasher.sh  hhcc_tidy_move_toy_to_trofase.sh  no-block-in-the-box.test  one-block-in-the-box.test  two-block-in-the-box.test
